# Sem2-OOP

a1-911-Alexandra-Bledea-1-main/: CMakeLists.txt  main.c
a10-911-Alexandra-Bledea-1-main/: CMakeLists.txt  ShoppingBasket.csv  ShoppingBasket.html  start.cpp  text.txt
a10-911-Alexandra-Bledea-1-main/AbstractShoppingBasket/: AbstractShoppingBasket.cpp  AbstractShoppingBasket.h
a10-911-Alexandra-Bledea-1-main/Action/: Action.cpp  Action.h
a10-911-Alexandra-Bledea-1-main/AdminModeGUI/: AdminModeGUI.cpp  AdminModeGUI.h
a10-911-Alexandra-Bledea-1-main/CSVShoppingBasket/: CSVShoppingBasket.cpp
a10-911-Alexandra-Bledea-1-main/Console/: console.cpp  console.h
a10-911-Alexandra-Bledea-1-main/Domain/: domain.h
a10-911-Alexandra-Bledea-1-main/Exceptions/: Exceptions.cpp  Exceptions.h
a10-911-Alexandra-Bledea-1-main/FileRepository/: FileRepository.h
a10-911-Alexandra-Bledea-1-main/GUI/: GUI.cpp  GUI.h
a10-911-Alexandra-Bledea-1-main/HTMLShoppingBasket/: HTMLShoppingBasket.cpp
a10-911-Alexandra-Bledea-1-main/PictureDelegate/: PictureDelegate.cpp  PictureDelegate.h
a10-911-Alexandra-Bledea-1-main/Repository/: repository.cpp  repository.h
a10-911-Alexandra-Bledea-1-main/Service/: service.cpp  service.h
a10-911-Alexandra-Bledea-1-main/TableMode/: TableMode.cpp  TableMode.h
a10-911-Alexandra-Bledea-1-main/Tests/: test_service.h
a10-911-Alexandra-Bledea-1-main/UserModeGUI/: UserModeGUI.cpp  UserModeGUI.h
a10-911-Alexandra-Bledea-1-main/Validation/: validation.cpp  validation.h
a23-911-Alexandra-Bledea-main/: CMakeLists.txt  main.c
a23-911-Alexandra-Bledea-main/DynamicArray/: dynamic-array.c  dynamic-array.h
a23-911-Alexandra-Bledea-main/a23-911-Alexandra-Bledea/: CMakeLists.txt
a23-911-Alexandra-Bledea-main/console/: console.c  console.h
a23-911-Alexandra-Bledea-main/domain/: domain.c  domain.h
a23-911-Alexandra-Bledea-main/repository/: repository.c  repository.h
a23-911-Alexandra-Bledea-main/service/: service.c  service.h
a23-911-Alexandra-Bledea-main/tests/: tests.c  tests.h
a23-911-Alexandra-Bledea-main/undo_redo/: repo_undo.c  repo_undo.h
a23-911-Alexandra-Bledea-main/validation/: validation.c  validation.h
a45-911-Alexandra-Bledea-main/: CMakeLists.txt  start.cpp
a45-911-Alexandra-Bledea-main/Console/: console.cpp  console.h
a45-911-Alexandra-Bledea-main/Domain/: domain.cpp  domain.h
a45-911-Alexandra-Bledea-main/Repository/: repository.cpp  repository.h
a45-911-Alexandra-Bledea-main/Service/: service.cpp  service.h
a45-911-Alexandra-Bledea-main/Tests/: test_domain.cpp  test_dynamic_array.cpp  test_repository.cpp  test_repository.h  test_service.cpp  test_service.h  test_validation.cpp
a45-911-Alexandra-Bledea-main/Validation/: validation.cpp  validation.h
a67-911-Alexandra-Bledea-main/: CMakeLists.txt  start.cpp  text.txt
a67-911-Alexandra-Bledea-main/Console/: console.cpp  (+1 more)
a89-911-Alexandra-Bledea-main/: CMakeLists.txt  ShoppingBasket.csv  start.cpp  text.txt
a89-911-Alexandra-Bledea-main/AdminModeGUI/: AdminModeGUI.cpp  AdminModeGUI.h
a89-911-Alexandra-Bledea-main/CSVShoppingBasket/: CSVShoppingBasket.cpp  CSVShoppingBasket.h
a89-911-Alexandra-Bledea-main/Domain/: domain.cpp
a89-911-Alexandra-Bledea-main/Exceptions/: Exceptions.cpp
a89-911-Alexandra-Bledea-main/FileRepository/: FileRepository.cpp
a89-911-Alexandra-Bledea-main/GUI/: GUI.cpp  GUI.h
a89-911-Alexandra-Bledea-main/HTMLShoppingBasket/: HTMLShoppingBasket.cpp  HTMLShoppingBasket.h
a89-911-Alexandra-Bledea-main/Repository/: repository.cpp  repository.h
a89-911-Alexandra-Bledea-main/Service/: service.cpp  service.h
a89-911-Alexandra-Bledea-main/Tests/: test_domain.cpp  test_domain.h  test_repository.cpp  test_repository.h  test_validation.h
a89-911-Alexandra-Bledea-main/UserModeGUI/: UserModeGUI.cpp  UserModeGUI.h
e2-911-Alexandra-Bledea-main/: CMakeLists.txt  main.cpp
e2-911-Alexandra-Bledea-main/Domain/: Building.cpp  Building.h  Ethnologist.cpp  Ethnologist.h
e2-911-Alexandra-Bledea-main/GUI/: PersonWindow.cpp  PersonWindow.h
e2-911-Alexandra-Bledea-main/Observer/: Observer.h
e2-911-Alexandra-Bledea-main/Repository/: BuildingsRepo.cpp  BuildingsRepo.h  PeopleRepo.cpp  PeopleRepo.h
e2-911-Alexandra-Bledea-main/Service/: Service.cpp  Service.h
e2-911-Alexandra-Bledea-main/TableModel/: TableModel.cpp  TableModel.h
e3-911-Alexandra-Bledea-main/: CMakeLists.txt  README.md  main.cpp
e3-911-Alexandra-Bledea-main/Domain/: Cell.cpp  Cell.h  Person.cpp  Person.h
e3-911-Alexandra-Bledea-main/GUI/: PlayerWindow.cpp  PlayerWindow.h
e3-911-Alexandra-Bledea-main/Observer/: Observer.h
e3-911-Alexandra-Bledea-main/Repository/: Cells.cpp  Cells.h  Players.cpp  Players.h
e3-911-Alexandra-Bledea-main/TableModel/: TableModel.cpp  TableModel.h
t1-911-Alexandra-Bledea-1-main/: CMakeLists.txt  start.cpp
t1-911-Alexandra-Bledea-1-main/Console/: Console.cpp  Console.h
t1-911-Alexandra-Bledea-1-main/Domain/: Gene.cpp  Gene.h
t1-911-Alexandra-Bledea-1-main/DynamicArray/: dynamic_array.h
t1-911-Alexandra-Bledea-1-main/Repository/: Repository.cpp  Repository.h
t1-911-Alexandra-Bledea-1-main/Service/: Service.cpp  Service.h
t1-911-Alexandra-Bledea-1-main/Test/: Test.cpp  Test.h
t2-911-Alexandra-Bledea-1-main/: CMakeLists.txt  main.cpp  measurements.txt
t2-911-Alexandra-Bledea-1-main/BMI/: BMI.cpp  BMI.h
t2-911-Alexandra-Bledea-1-main/BP/: BP.cpp  BP.h
t2-911-Alexandra-Bledea-1-main/Console/: Console.cpp  Console.h
t2-911-Alexandra-Bledea-1-main/Exceptions/: ExceptionPerson.cpp  ExceptionPerson.h
t2-911-Alexandra-Bledea-1-main/Measurement/: Measurement.cpp  Measurement.h
t2-911-Alexandra-Bledea-1-main/Person/: Person.cpp  Person.h
t2-911-Alexandra-Bledea-1-main/Validation/: Validation.cpp  Validation.h
t3-911-Alexandra-Bledea-main/: CMakeLists.txt  main.cpp
t3-911-Alexandra-Bledea-main/Domain/: weather.cpp  weather.h
t3-911-Alexandra-Bledea-main/GUI/: GUI.cpp  GUI.h
t3-911-Alexandra-Bledea-main/Repository/: Repository.cpp  Repository.h
t3-911-Alexandra-Bledea-main/Service/: Service.cpp  Service.h
(+13 files in other folders)
